name:                es-profile-visualiser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/benjamin-hodgson/es-profile-visualiser#readme
license:             BSD3
license-file:        LICENSE
author:              Benjamin Hodgson
maintainer:          bhodgson@stackoverflow.com
copyright:           © Benjamin Hodgson, 2018
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable es-profile-visualiser
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ESProfileVis.Types,
                       ESProfileVis.Util,
                       ESProfileVis.View
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       template-haskell >= 2.12 && < 2.13,
                       scotty >= 0.11 && < 0.12,
                       lucid >= 2.9 && < 2.10,
                       aeson >= 1.2 && < 1.3,
                       text >= 1.2 && < 1.3,
                       bytestring >= 0.10 && < 0.11,
                       network-uri >= 2.6 && < 2.7,
                       HTTP >= 4000.3 && < 4000.4,
                       unordered-containers >= 0.2 && < 0.3,
                       open-browser >= 0.2 && < 0.3,
                       wai >= 3.2 && < 3.3,
                       warp >= 3.2 && < 3.3,
                       http-types >= 0.9 && < 0.10,
                       wai-middleware-static >= 0.8 && < 0.9,
                       wai-extra >= 3.0 && < 3.1
